
Плоские массивы и Span
|     Method |     Mean |    Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |---------:|---------:|---------:|---------:|---------:|---------:|----------:|
|   Compress | 38.49 ms | 2.129 ms | 0.117 ms | 785.7143 | 785.7143 | 785.7143 |  26.83 MB |
| Uncompress | 62.28 ms | 2.357 ms | 0.129 ms | 750.0000 | 750.0000 | 750.0000 |  29.79 MB |

Инлайнинг DCT1D, Заранее подсчитать Scale, Плоский Cosine
|     Method |     Mean |    Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |---------:|---------:|---------:|---------:|---------:|---------:|----------:|
|   Compress | 26.44 ms | 2.101 ms | 0.115 ms | 906.2500 | 906.2500 | 906.2500 |  26.83 MB |
| Uncompress | 50.25 ms | 0.543 ms | 0.030 ms | 800.0000 | 800.0000 | 800.0000 |  29.79 MB |

AAN DCT
|     Method |     Mean |    Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |---------:|---------:|---------:|---------:|---------:|---------:|----------:|
|   Compress | 20.84 ms | 0.177 ms | 0.010 ms | 906.2500 | 906.2500 | 906.2500 |  26.83 MB |
| Uncompress | 44.51 ms | 2.654 ms | 0.145 ms | 833.3333 | 833.3333 | 833.3333 |  29.79 MB |

NET 9
|     Method |     Mean |    Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |---------:|---------:|---------:|---------:|---------:|---------:|----------:|
|   Compress | 13.76 ms | 0.446 ms | 0.024 ms | 953.1250 | 953.1250 | 953.1250 |  26.83 MB |
| Uncompress | 36.98 ms | 6.228 ms | 0.341 ms | 785.7143 | 785.7143 | 785.7143 |  25.79 MB |

HuffmanNode Decode
|     Method |     Mean |    Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |---------:|---------:|---------:|---------:|---------:|---------:|----------:|
|   Compress | 14.32 ms | 4.453 ms | 0.244 ms | 953.1250 | 953.1250 | 953.1250 |  26.81 MB |
| Uncompress | 11.47 ms | 0.118 ms | 0.006 ms | 953.1250 | 953.1250 | 953.1250 |  25.79 MB |



