@@ -1,7 +1,0 @@
-﻿namespace JPEG.Images;
-
-public enum PixelFormat
-{
-    Rgb,
-    YCbCr,
-}
