@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="System.Drawing.Common" Version="8.0.0-preview.1.23110.8"/>
+        <PackageReference Include="System.Drawing.Common" Version="9.0.2"/>
     </ItemGroup>
 
     <ItemGroup>
