@@ -71,6 +71,9 @@ HuffmanNode Decode
 |   Compress | 14.32 ms | 4.453 ms | 0.244 ms | 953.1250 | 953.1250 | 953.1250 |  26.81 MB |
 | Uncompress | 11.47 ms | 0.118 ms | 0.006 ms | 953.1250 | 953.1250 | 953.1250 |  25.79 MB |
 
-
-
+Без Pixel
+|     Method |     Mean |    Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
+|----------- |---------:|---------:|---------:|---------:|---------:|---------:|----------:|
+|   Compress | 11.47 ms | 0.348 ms | 0.019 ms | 656.2500 | 656.2500 | 656.2500 |   2.81 MB |
+| Uncompress | 10.14 ms | 0.633 ms | 0.035 ms | 484.3750 | 484.3750 | 484.3750 |   1.79 MB |
 
